Package_Tools/include-C/appstream/h/as_issue.h

#define AS_TYPE_ISSUE (as_issue_get_type ())
/**
 * AsIssueKind:
 * @AS_ISSUE_KIND_UNKNOWN:	Unknown issue type
 * @AS_ISSUE_KIND_GENERIC:	Generic issue type
 * @AS_ISSUE_KIND_CVE:		Common Vulnerabilities and Exposures issue
 *
 * Checksums supported by #AsRelease
 **/
typedef enum {
	AS_ISSUE_KIND_UNKNOWN,
	AS_ISSUE_KIND_GENERIC,
	AS_ISSUE_KIND_CVE,
	/*< private >*/
	AS_ISSUE_KIND_LAST
} AsIssueKind;
const gchar *as_issue_kind_to_string (AsIssueKind kind);
AsIssueKind  as_issue_kind_from_string (const gchar *kind_str);
AsIssue	    *as_issue_new (void);
AsIssueKind  as_issue_get_kind (AsIssue *issue);
void	     as_issue_set_kind (AsIssue *issue, AsIssueKind kind);
const gchar *as_issue_get_id (AsIssue *issue);
void	     as_issue_set_id (AsIssue *issue, const gchar *id);
const gchar *as_issue_get_url (AsIssue *issue);
void	     as_issue_set_url (AsIssue *issue, const gchar *url);